# square_calculation_lib

./: README.md  main.py  pyproject.toml
geometry/: circle.py  factory.py  triangle.py
tests/: test_circle.py  test_triangle.py
